--- a/index.html
+++ b/index.html
@@ -31,20 +31,24 @@
         <hr>
 
         <section id="main_content">
-          <h6>
-<a id="-pygrav" class="anchor" href="#-pygrav" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>########## pyGrav</h6>
+          <h1>
+<a id="pygrav" class="anchor" href="#pygrav" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pyGrav</h1>
 
-<p>Version 1.0
-21 jan 2016</p>
+<p>Version 1.0<br>
+21 Jan. 2016<br>
+<a href="http://basileh.github.io/pyGrav/">pyGrav website</a></p>
 
-<p>Hector, B. and Hinderer, J.: pyGrav, a Python-based program for handling and 
-processing relative gravity data, Computers &amp; Geosciences, doi:10.1016/j.cageo.2016.03.010, 2016.</p>
+<p>Hector, B. and Hinderer, J.: <em>pyGrav, a Python-based program for handling and 
+processing relative gravity data</em>, Computers &amp; Geosciences, <a href="http://dx.doi.org/10.1016/j.cageo.2016.03.010">doi:10.1016/j.cageo.2016.03.010</a>, 2016.</p>
 
-<p>pyGrav, a Python-based program for handling and processing relative gravity data
-B. Hector(1,2), J. Hinderer(1)</p>
+<hr>
 
-<p>(1):Institut de Physique du Globe de Strasbourg  UMR 7516 CNRS/Université de Strasbourg, 5 rue Descartes 67084 Strasbourg, France
-(2):CNES/IRD/UJF-Grenoble 1/CNRS/G-INP, LTHE, UMR 5564, 38041 Grenoble, France</p>
+<p>pyGrav, a Python-based program for handling and processing relative gravity data<br>
+B. Hector (1, 2), J. Hinderer (1)</p>
+
+<p>(1): Institut de Physique du Globe de Strasbourg  UMR 7516 CNRS/Université de Strasbourg, 5 rue Descartes 67084 Strasbourg, France</p>
+
+<p>(2): CNES/IRD/UJF-Grenoble 1/CNRS/G-INP, LTHE, UMR 5564, 38041 Grenoble, France</p>
         </section>
 
         <footer>
